--- a/phone.htm
+++ b/phone.htm
@@ -412,6 +412,17 @@ Motorola XT894</h3>
 焊接UART</a><br>
 
 &oplus;
+<b>Android</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/xt894_android_setup.htm">
+    安裝系統</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/xt894_android_skip_setup.htm">
+    如何跳過安裝畫面</a><br>
+
+&oplus;
 <b>Alpine</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
