--- a/phone.htm
+++ b/phone.htm
@@ -728,6 +728,10 @@ Motorola XT894</h3>
     <a href="phone/xt894_android_skip_setup.htm">
     如何跳過安裝畫面</a><br>
 
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/xt894_android_safestrap.htm">
+    如何進入Safestrap</a><br>
+
 &oplus;
 <b>Alpine</b><br>
 
