--- a/phone.htm
+++ b/phone.htm
@@ -760,6 +760,17 @@ Motorola XT894</h3>
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="phone/xt894_maemo_ok.htm">
     如何啟動OK按鍵</a><br>
+
+&oplus;
+<b>Sailfish OS</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/xt894_sfos_setup.htm">
+    安裝系統</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/xt894_sfos_fix_cert.htm">
+    解決SSL certificate issues</a><br>
 <br><br><br><br>
 
 <div id="xt897"></div>
