--- a/phone.htm
+++ b/phone.htm
@@ -769,6 +769,10 @@ Motorola XT894</h3>
     安裝系統</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/xt894_sfos_keys.htm">
+    如何修改按鍵值</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="phone/xt894_sfos_fix_cert.htm">
     解決SSL certificate issues</a><br>
 <br><br><br><br>
