--- a/phone.htm
+++ b/phone.htm
@@ -504,43 +504,43 @@ F(x)tec Pro1 X</h3>
 <a href="phone/pro1x_fix_edl.htm">
 解決開機一直處於edl模式的問題</a><br>
 
-&lowast;
-<a href="phone/pro1x/fix_partition.htm">
-解決"FAILED (remote: Partition not found)"問題</a><br>
+&dash;
+<a href="phone/pro1x_fix_partition.htm">
+解決FAILED (remote: Partition not found)問題</a><br>
 
-&lowast;
-<a href="phone/pro1x/fix_userdata.htm">
-解決"error: Cannot generate image for userdata"問題</a><br>
+&dash;
+<a href="phone/pro1x_fix_userdata.htm">
+解決Error: Cannot generate image for userdata問題</a><br>
 
-&lowast;
-<a href="phone/pro1x/fix_snap.htm">
-解決"Flashing of userdata is not allowed in snapshotted state"問題</a><br>
+&dash;
+<a href="phone/pro1x_fix_snap.htm">
+解決Flashing of userdata is not allowed in snapshotted state問題</a><br>
 
 &oplus;
 <b>Android</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/pro1x/root.htm">
-    root系統</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/pro1x_android_root.htm">
+    Root系統</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/pro1x/install_android.htm">
-    安裝系統(QFIL)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/pro1x_android_setup.htm">
+    安裝系統(使用QFIL)</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/pro1x/fix_sensor.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/pro1x_android_fix_sensor.htm">
     解決畫面無法旋轉的問題</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/pro1x/fix_termux.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/pro1x_android_fix_termux.htm">
     解決新版Termux App無法安裝的問題</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&oplus;
-    XServer XSDL<br>
+    <b>Debian</b><br>
     
-            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-            <a href="phone/pro1x/xsdl_setup.htm">
-            安裝Debian系統</a><br>
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="phone/pro1x_android_debian.htm">
+        安裝系統</a><br>
 
 &oplus;
 <b>Droidian</b><br>
