--- a/phone/n900_3150ma.htm
+++ b/phone/n900_3150ma.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../phone.htm">手機</a> - N900 - <b>改造電池(3.7V 3150mA電池)</b></h3>
+<h3><a href="../phone.htm">手機</a> - Nokia N900 - <b>改造電池(3.7V 3150mA電池)</b></h3>
 <hr size="1"><br>
 <p>
 Mugen電池的續航力已經無法支撐太久，加上司徒想要改造大容量電池，因此，司徒決定把相機部份去除，藉此可以塞下更大的電池<br>
