--- a/phone/n900_debian_patch_openscad.htm
+++ b/phone/n900_debian_patch_openscad.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../phone.htm">手機</a> - N900 - Easy Debian - <b>Patch OpenSCAD</b></h3>
+<h3><a href="../phone.htm">手機</a> - Nokia N900 - Easy Debian - <b>Patch OpenSCAD</b></h3>
 <hr size="1"><br>
 <p>
 雖然OpenSCAD可以在Debian Wheezy(7)以上的系統安裝，不過司徒測試Easy Debian後，發現只有在Easy Debian(Jessie)才可以成功安裝和開啟，不過，當司徒程式寫好OpenSCAD程式並Compile後，卻發生無法顯示2D/3D圖形的問題，而在Easy Debian(Wheezy)上，OpenSCAD可以安裝成功，但是在執行的過程中，OpenSCAD會出現如下<b>CGAL ERROR</b>的錯誤訊息：<br>
