--- a/phone/n900_maemo_dummy_network.htm
+++ b/phone/n900_maemo_dummy_network.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../phone.htm">手機</a> - N900 - Maemo - <b>連接Dummy Network</b></h3>
+<h3><a href="../phone.htm">手機</a> - Nokia N900 - Maemo - <b>連接Dummy Network</b></h3>
 <hr size="1"><br>
 <p>
 為何需要Dummy Network呢？原因在於，如果使用USB轉RJ-45網卡上網時，Maemo系統無法得知目前是否已經連上網路，因此，需要一個假的Dummy Network，用來欺騙Maemo系統，這樣系統就可以正常更新Email、聊天訊息等事項<br><br>
