--- a/phone/n900_maemo_fix_psx4m_keys.htm
+++ b/phone/n900_maemo_fix_psx4m_keys.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../phone.htm">手機</a> - N900 - Maemo - <b>解決PSX4M check permission to keys file問題</b></h3>
+<h3><a href="../phone.htm">手機</a> - Nokia N900 - Maemo - <b>解決PSX4M check permission to keys file問題</b></h3>
 <hr size="1"><br>
 <p>
 雖然N900上有PSX4M模擬器，不過在設定完Keys時，竟出現<b>Somethings goes wrong, check permission to keys file</b>訊息，如下圖：<br>
