--- a/phone/n900_maemo_fix_screen_tearing.htm
+++ b/phone/n900_maemo_fix_screen_tearing.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../phone.htm">手機</a> - N900 - Maemo - <b>解決Screen Tearing問題</b></h3>
+<h3><a href="../phone.htm">手機</a> - Nokia N900 - Maemo - <b>解決Screen Tearing問題</b></h3>
 <hr size="1"><br>
 <p>
 雖然司徒之前已經有上網找尋這個問題，不過沒有找到解答，所以司徒一直認為是N900的驅動問題，直到最近，司徒再度心血來潮，想說來解解看這個問題，這才發現OMAP2的顯示驅動似乎怪怪的，過程如下說明<br><br>
