--- a/phone/n900_maemo_fix_tracker.htm
+++ b/phone/n900_maemo_fix_tracker.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../phone.htm">手機</a> - N900 - Maemo - <b>解決High CPU Usage問題(tracker)</b></h3>
+<h3><a href="../phone.htm">手機</a> - Nokia N900 - Maemo - <b>解決High CPU Usage問題(tracker)</b></h3>
 <hr size="1"><br>
 <p>
 剛刷完N900系統，司徒就發現系統的反應速度相當緩慢，使用top指令查看後，才發現是tracker process造成CPU Usage過高所致，解決如下：<br>
