--- a/phone/n900_maemo_fix_vnc_screen_off.htm
+++ b/phone/n900_maemo_fix_vnc_screen_off.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../phone.htm">手機</a> - N900 - Maemo - <b>解決VNC Screen Off問題</b></h3>
+<h3><a href="../phone.htm">手機</a> - Nokia N900 - Maemo - <b>解決VNC Screen Off問題</b></h3>
 <hr size="1"><br>
 <p>
 由於N900有X11 VNC套件移植，因此，使用者可以相當方便的使用VNC做遠端連線操作，不過當Screen Off的時間到時，不管VNC是否還是持續操作，N900螢幕以及VNC畫面都會同時變黑，除非再度按下N900實體鍵盤，否則畫面持續變黑，解法如下說明<br><br>
