--- a/phone/n900_maemo_usbhost.htm
+++ b/phone/n900_maemo_usbhost.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../phone.htm">手機</a> - N900 - Maemo - <b>切換USB Host模式</b></h3>
+<h3><a href="../phone.htm">手機</a> - Nokia N900 - Maemo - <b>切換USB Host模式</b></h3>
 <hr size="1"><br>
 <p>
 雖然原廠的Maemo系統並不支援USB Host模式，不過，多虧在Pali和Maemo社群的努力下，終於讓N900可以支援USB Hos模式(僅Kernel Power有支援)，這項改進，再度把N900推向高峰，有了USB Host模式加持，N900更像是一台PC主機，可以連接USB轉RJ-45網卡等裝置，看似很強大，其實還是有熱拔插的問題，不過有總比沒有好，目前N900上有兩套軟體可以用來切換USB Host模式，分別是USB Mode和h-e-n，只有USB Mode有提供USB Host充電模式<br><br>
