--- a/phone/n900_uart2.htm
+++ b/phone/n900_uart2.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../phone.htm">手機</a> - N900 - <b>USB、UART改造(2)</b></h3>
+<h3><a href="../phone.htm">手機</a> - Nokia N900 - <b>USB、UART改造(2)</b></h3>
 <hr size="1"><br>
 <p>
 司徒懶得購買USB A接頭，因此，直接從小米行動電源拆下來使用<br>
