--- a/phone/n900_charge_led.htm
+++ b/phone/n900_charge_led.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../phone.htm">手機</a> - N900 - <b>充電LED電路</b></h3>
+<h3><a href="../phone.htm">手機</a> - Nokia N900 - <b>充電LED電路</b></h3>
 <hr size="1"><br>
 <p>
 充電時的黃色燈光是由CHRG_IND控制<br>
