--- a/phone/n900_joystick2.htm
+++ b/phone/n900_joystick2.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../phone.htm">手機</a> - N900 - <b>自製遊戲手把(380機架)</b></h3>
+<h3><a href="../phone.htm">手機</a> - Nokia N900 - <b>自製遊戲手把(380機架)</b></h3>
 <hr size="1"><br>
 <p>
 雖然司徒之前已經自製一個N900手把，不過體積有點大，加上缺少Start、Select和L、R鍵，因此，司徒決定再製作一個更小、按鍵更多的手把，於是司徒找了一下可用的材料，發覺Dingoo Tech A380的按鍵還不錯<br>
