--- a/phone/n900_maemo_build_kernel_power53.htm
+++ b/phone/n900_maemo_build_kernel_power53.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../phone.htm">手機</a> - N900 - Maemo - <b>Build Kernel (Power53)</b></h3>
+<h3><a href="../phone.htm">手機</a> - Nokia N900 - Maemo - <b>Build Kernel (Power53)</b></h3>
 <hr size="1"><br>
 <p>
 步驟如下：
