--- a/phone/n900_maemo_fix_ctrl_bksp.htm
+++ b/phone/n900_maemo_fix_ctrl_bksp.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../phone.htm">手機</a> - N900 - Maemo - <b>解決Ctrl+Backspace失效問題</b></h3>
+<h3><a href="../phone.htm">手機</a> - Nokia N900 - Maemo - <b>解決Ctrl+Backspace失效問題</b></h3>
 <hr size="1"><br>
 <p>
 因為使用者曾經按下<b>Ctrl+Shift</b>鍵，導致按鍵鎖住，只要再按一次<b>Ctrl+Shift</b>即可
