--- a/phone/n900_maemo_fix_logfile.htm
+++ b/phone/n900_maemo_fix_logfile.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../phone.htm">手機</a> - N900 - Maemo - <b>解決High CPU Usage問題(/usr/bin/Xorg -logfile)</b></h3>
+<h3><a href="../phone.htm">手機</a> - Nokia N900 - Maemo - <b>解決High CPU Usage問題(/usr/bin/Xorg -logfile)</b></h3>
 <hr size="1"><br>
 <p>
 使用者如果發現N900反應速度相當慢時，可以使用top指令查看，如發現是<b>/usr/bin/Xorg -logfile</b>所致時，可以使用如下方式解決：
