--- a/phone/n900_maemo_fix_psx4m_touchscreen.htm
+++ b/phone/n900_maemo_fix_psx4m_touchscreen.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../phone.htm">手機</a> - N900 - Maemo - <b>解決PSX4M Could not open touchscreen問題</b></h3>
+<h3><a href="../phone.htm">手機</a> - Nokia N900 - Maemo - <b>解決PSX4M Could not open touchscreen問題</b></h3>
 <hr size="1"><br>
 <p>
 假如使用者透過PSX4M玩PS1遊戲，遇到如下<b>Could not open touchscreen</b>問題時：<br>
