--- a/phone/n900_maemo_xbindkeys.htm
+++ b/phone/n900_maemo_xbindkeys.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../phone.htm">手機</a> - N900 - Maemo - <b>自定義Xbindkeys</b></h3>
+<h3><a href="../phone.htm">手機</a> - Nokia N900 - Maemo - <b>自定義Xbindkeys</b></h3>
 <hr size="1"><br>
 <p>
 Xbindkeys是一套相當好用的鍵盤事件處理軟體，該工具可以設定要觸發的組合鍵，然後搭配其它工具軟體處理觸發的事件，如下範例：
