--- a/phone/n900_postmarketos_fix_make_error_137.htm
+++ b/phone/n900_postmarketos_fix_make_error_137.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../phone.htm">手機</a> - N900 - PostMarketOS - <b>解決Make error 137問題</b></h3>
+<h3><a href="../phone.htm">手機</a> - Nokia N900 - PostMarketOS - <b>解決Make error 137問題</b></h3>
 <hr size="1"><br>
 <p>
 Resource不足，掛載2GB Swap即可
