--- a/phone/n900_postmarketos_unpack_uinitrd.htm
+++ b/phone/n900_postmarketos_unpack_uinitrd.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../phone.htm">手機</a> - N900 - PostMarketOS - <b>Unpack uInitrd-postmarketos-stable</b></h3>
+<h3><a href="../phone.htm">手機</a> - Nokia N900 - PostMarketOS - <b>Unpack uInitrd-postmarketos-stable</b></h3>
 <hr size="1"><br>
 <p>
 參考資訊：<br>
