--- a/phone/n900_uart.htm
+++ b/phone/n900_uart.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../phone.htm">手機</a> - N900 - <b>USB、UART改造(1)</b></h3>
+<h3><a href="../phone.htm">手機</a> - Nokia N900 - <b>USB、UART改造(1)</b></h3>
 <hr size="1"><br>
 <p>
 拆掉兩邊的喇叭，剛好就可以擺下USB和UART排針<br>
