--- a/phone.htm
+++ b/phone.htm
@@ -408,7 +408,7 @@ F(x)tec Pro1</h3>
 簡要規格</a><br>
 
 &oplus;
-<b>Sailfish</b><br>
+<b>Sailfish OS</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="phone/pro1_sfos_setup.htm">
@@ -875,55 +875,43 @@ Motorola XT897</h3>
 <b>Sailfish OS</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
-    <a href="phone/xt897_sailfish_setup.htm">
+    <a href="phone/xt897_sfos_setup.htm">
     安裝系統</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/xt897/gcc.htm">
-    安裝gcc</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/xt897_sfos_gcc.htm">
+    安裝GCC</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/xt897/gpp.htm">
-    安裝g++</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/xt897_sfos_cpp.htm">
+    安裝G++</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/xt897/x11.htm">
-    安裝x11</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/xt897_sfos_x11.htm">
+    安裝X11</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/xt897/sdl2.htm">
-    安裝sdl2</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/xt897_sfos_sdl2.htm">
+    安裝SDL2</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/xt897/gnutls.htm">
-    安裝gnutls</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/xt897_sfos_glesv2.htm">
+    安裝GLESv2</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/xt897/glesv2.htm">
-    安裝glesv2</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/xt897/openssl.htm">
-    安裝openssl</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/xt897/lipstick.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/xt897_sfos_rotate.htm">
     如何旋轉畫面</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/xt897/ssh.htm">
-    ssh連接到手機</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/xt897_sfos_ssh.htm">
+    SSH連接到手機</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/xt897/sfos_keyboard.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/xt897_sfos_keyboard.htm">
     自定義鍵盤按鍵</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/xt897/pl2303.htm">
-    支援Prolific 2303</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/xt897/opengl_argb8888.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/xt897_sfos_fps.htm">
     為何OpenGL Framerate只有30fps</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
