--- a/phone/xt897_sfos_gcc.htm
+++ b/phone/xt897_sfos_gcc.htm
@@ -2,16 +2,19 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../phone.htm">手機</a> - F(x)tec Pro1 - Sailfish OS - <b>如何讓桌面可以橫向顯示</b></h3>
+<h3><a href="../phone.htm">手機</a> - Motorola XT897 - Sailfish OS - <b>安裝GCC</b></h3>
 <hr size="1"><br>
 <p>
-參考資訊：<br>
-https://cassandraasaservice.github.io/#ketju<br><br>
+參考資訊： <br>
+https://talk.maemo.org/showthread.php?t=92036<br><br>
 
-方式如下：
+步驟如下：
 </p>
 <pre>
-$ devel-su sed -e "s/return allowed/return Orientation.All/" -i  /usr/lib/qt5/qml/Sailfish/Silica/Page.qml
+$ devel-su
+# ssu ar mer-tools
+# pkcon refresh
+# pkcon install gcc
 </pre>
 
 <br><script type="text/javascript" src="../tail.js"></script>
