--- a/phone/xt897_sfos_setup.htm
+++ b/phone/xt897_sfos_setup.htm
@@ -12,7 +12,7 @@
 4. 刷入https://github.com/steward-fu/website/releases/download/xt897/sailfishos-moto_msm8960_jbbl-release-3.3.0.16-alpha-13.zip<br><br>
 
 完成<br>
-<img src="xt897_sailfish_setup/1.jpg" class="maxSize">
+<img src="xt897_sfos_setup/1.jpg" class="maxSize">
 </p>
 
 <br><script type="text/javascript" src="../tail.js"></script>
