--- a/phone/pro1_sfos_fix_clang.htm
+++ b/phone/pro1_sfos_fix_clang.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../phone.htm">手機</a> - F(x)tec Pro1 - Sailfish - <b>解決Undefined reference to stpcpy問題</b></h3>
+<h3><a href="../phone.htm">手機</a> - F(x)tec Pro1 - Sailfish OS - <b>解決Undefined reference to stpcpy問題</b></h3>
 <hr size="1"><br>
 <p>
 參考資訊：<br>
