--- a/phone/xt894_sfos_setup.htm
+++ b/phone/xt894_sfos_setup.htm
@@ -11,7 +11,10 @@ https://xdaforums.com/t/rom-link-sailfish-os-droid-4-maserati.3777424/<br><br>
 步驟如下：<br>
 1. 進入Safestrap<br>
 2. 刷入https://github.com/steward-fu/website/releases/download/xt894/cm-11-20160104-UNOFFICIAL-maserati.zip<br>
-3. 刷入https://github.com/steward-fu/website/releases/download/xt894/sailfishos-maserati-release-2.1.3.7-rel2.zip
+3. 刷入https://github.com/steward-fu/website/releases/download/xt894/sailfishos-maserati-release-2.1.3.7-rel2.zip<br><br>
+
+完成<br>
+<img src="xt894_sfos_setup/1.jpg" class="maxSize">
 </p>
 
 <br><script type="text/javascript" src="../tail.js"></script>
