--- a/phone/xt897_sfos_glesv2.htm
+++ b/phone/xt897_sfos_glesv2.htm
@@ -2,16 +2,19 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../phone.htm">手機</a> - F(x)tec Pro1 - Sailfish OS - <b>如何讓桌面可以橫向顯示</b></h3>
+<h3><a href="../phone.htm">手機</a> - Motorola XT897 - Sailfish OS - <b>安裝GLESv2</b></h3>
 <hr size="1"><br>
 <p>
-參考資訊：<br>
-https://cassandraasaservice.github.io/#ketju<br><br>
-
-方式如下：
+步驟如下：
 </p>
 <pre>
-$ devel-su sed -e "s/return allowed/return Orientation.All/" -i  /usr/lib/qt5/qml/Sailfish/Silica/Page.qml
+$ devel-su
+# ssu ar mer-tools
+# pkcon refresh
+# pkcon install libhybris-libEGL-devel libhybris-libGLESv2-devel
 </pre>
+<p>
+P.S. 不能安裝mesa相關套件，如：mesa-llvmpipe-libGLESv2-devel，否則會開機黑屏
+</p>
 
 <br><script type="text/javascript" src="../tail.js"></script>
