Astro Slide 5G Refined.

--- a/phone.htm
+++ b/phone.htm
@@ -1202,8 +1202,8 @@ Sony Ericsson Xperia Mini Pro(SK17i)</h3>
 Astro Slide 5G</h3>
 <hr size="1"><br><br><br><br><br>
 
-&lowast;
-<a href="phone/astro/review.htm">
+&dash;
+<a href="phone/astro_spec.htm">
 介紹</a><br>
 
 &dash;
@@ -1221,17 +1221,17 @@ Unlock Bootloader</a><br>
 &oplus;
 <b>Android</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/astro/an_root.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/astro_android_root.htm">
     Root Android</a><br>
     
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/astro/an_dump_bootimg.htm">
-    dump boot.img</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/astro_android_dump.htm">
+    Dump boot.img</a><br>
     
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/astro/an_build_kernel.htm">
-    build kernel 4.14.186</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/astro_android_build_kernel.htm">
+    Build Kernel 4.14.186</a><br>
 <br><br><br><br>
 
 <div id="cosmo"></div>
