--- a/system.htm
+++ b/system.htm
@@ -6,7 +6,7 @@
     <li><a href="index.htm">                    <span class="big">掌</span>機</a></li>
     <li><a href="phone.htm">                    <span class="big">手</span>機</a></li>
     <li><a href="system.htm" class="here">      <span class="big">系</span>統</a></li>
-    <li><a href="develop.htm">                  <span class="big">二</span>次開發</a></li>
+    <li><a href="game.htm">                     <span class="big">遊</span>戲</a></li>
     <li><a href="emu.htm">                      <span class="big">模</span>擬器</a></li>
     <li><a href="umpc.htm">                     <span class="big">微</span>電腦</a></li>
     <li><a href="mcu.htm">                      <span class="big">微</span>處理器</a></li>
