--- a/handheld/3dsll_mod.htm
+++ b/handheld/3dsll_mod.htm
@@ -14,7 +14,7 @@
 跳線後<br>
 <img src="3dsll_mod/3.jpg" class="maxSize"><br><br>
 
-USB C<br>
+USB-C<br>
 <img src="3dsll_mod/6.jpg" class="maxSize"><br><br>
 
 OpenSCAD
