--- a/handheld/gkd_pixel_spec.htm
+++ b/handheld/gkd_pixel_spec.htm
@@ -11,7 +11,7 @@
   <tr><th>DISPLAY</th><td>2.4" 320x240</td></tr>
   <tr><th>INPUT</th><td>GamePad</td></tr>
   <tr><th>SLOT</th><td>MiniSD</td></tr>
-  <tr><th>PORT</th><td>USB C<br>3.5mm Jack</td></tr>
+  <tr><th>PORT</th><td>USB-C<br>3.5mm Jack</td></tr>
   <tr><th>BATTERY</th><td>3.7v 1300mA</td></tr>
   <tr><th>DIMENSION</th><td>80mm x 56mm x 18mm</td></tr>
   <tr><th>WEIGHT</th><td>107g</td></tr>
