--- a/handheld/miyoo_a30_spec.htm
+++ b/handheld/miyoo_a30_spec.htm
@@ -12,7 +12,7 @@
     <tr><th>DISPLAY</th><td>2.8" 640x480</td></tr>
     <tr><th>INPUT</th><td>GamePad<br>JoyStick</td></tr>
     <tr><th>SLOT</th><td>MicroSD</td></tr>
-    <tr><th>PORT</th><td>USB C</td></tr>
+    <tr><th>PORT</th><td>USB-C</td></tr>
     <tr><th>WIRELESS</th><td>Wi-Fi</td></tr>
     <tr><th>BATTERY</th><td>3.7v 2600mA</td></tr>
     <tr><th>DIMENSION</th><td>125mm x 57mm x 15mm</td></tr>
