--- a/handheld/miyoo_mini_plus_spec.htm
+++ b/handheld/miyoo_mini_plus_spec.htm
@@ -11,7 +11,7 @@
     <tr><th>DISPLAY</th><td>3.5" 640x480</td></tr>
     <tr><th>SLOT</th><td>MicroSD</td></tr>
     <tr><th>INPUT</th><td>GamePad</td></tr>
-    <tr><th>PORT</th><td>USB C</td></tr>
+    <tr><th>PORT</th><td>USB-C</td></tr>
     <tr><th>WIRELESS</th><td>Wi-Fi</td></tr>
     <tr><th>BATTERY</th><td>3.7V 3000mA</td></tr>
     <tr><th>DIMENSION</th><td>108mm x 78mm x 22mm</td></tr>
