--- a/handheld/miyoo_mini_teardown.htm
+++ b/handheld/miyoo_mini_teardown.htm
@@ -17,7 +17,7 @@
 價格相當親民<br>
 <img src="miyoo_mini_teardown/1.jpg" class="maxSize"><br><br>
 
-耳機孔、MicroSD、USB C<br>
+耳機孔、MicroSD、USB-C<br>
 <img src="miyoo_mini_teardown/2.jpg" class="maxSize"><br><br>
 
 側邊只有音量鍵<br>
