--- a/handheld/miyoo_mini_teardown_v4.htm
+++ b/handheld/miyoo_mini_teardown_v4.htm
@@ -14,7 +14,7 @@
 正面<br>
 <img src="miyoo_mini_teardown_v4/3.jpg" class="maxSize"><br><br>
 
-耳機孔、MicroSD、USB C<br>
+耳機孔、MicroSD、USB-C<br>
 <img src="miyoo_mini_teardown_v4/4.jpg" class="maxSize"><br><br>
 
 音量滑輪<br>
