--- a/handheld/pandora_rebirth_uart.htm
+++ b/handheld/pandora_rebirth_uart.htm
@@ -17,7 +17,7 @@
 完成<br>
 <img src="pandora_rebirth_uart/4.jpg" class="maxSize"><br><br>
 
-司徒後來覺得直接使用USB C改造，應該會是最漂亮以及方便使用的改造<br>
+司徒後來覺得直接使用USB-C改造，應該會是最漂亮以及方便使用的改造<br>
 <img src="pandora_rebirth_uart/5.jpg" class="maxSize"><br><br>
 
 拆除連接器<br>
@@ -32,7 +32,7 @@
 跳線<br>
 <img src="pandora_rebirth_uart/8.jpg" class="maxSize"><br><br>
 
-USB C除了可以當作COM Port使用之外，也可以幫Pandora充電，算是相當棒的改造<br>
+USB-C除了可以當作COM Port使用之外，也可以幫Pandora充電，算是相當棒的改造<br>
 <img src="pandora_rebirth_uart/10.jpg" class="maxSize">
 </p>
 
