--- a/handheld/playdate_spec.htm
+++ b/handheld/playdate_spec.htm
@@ -10,7 +10,7 @@
   <tr><th>MEMORY</th><td>RAM 16MB<br>eMMC 4GB</td></tr>
   <tr><th>DISPLAY</th><td>2.7" 400x240 (1bit)</td></tr>
   <tr><th>INPUT</th><td>GamePad</td></tr>
-  <tr><th>PORT</th><td>USB C<br>3.5mm Jack</td></tr>
+  <tr><th>PORT</th><td>USB-C<br>3.5mm Jack</td></tr>
   <tr><th>WIRELESS</th><td>Wi-Fi</td></tr>
   <tr><th>BATTERY</th><td>3.7v 760mA</td></tr>
   <tr><th>DIMENSION</th><td>76mm × 74mm × 9mm</td></tr>
