--- a/handheld/retroid-flip_spec.htm
+++ b/handheld/retroid-flip_spec.htm
@@ -16,7 +16,7 @@
     <tr><th>DISPLAY</th><td>4.7" 750x1334 (Capacitive)</td></tr>
     <tr><th>SLOT</th><td>MicroSD</td></tr>
     <tr><th>INPUT</th><td>GamePad and JoyStick</td></tr>
-    <tr><th>PORT</th><td>USB C and Micro HDMI</td></tr>
+    <tr><th>PORT</th><td>USB-C and Micro HDMI</td></tr>
     <tr><th>WIRELESS</th><td>Wi-Fi and Bluetooth v5.0</td></tr>
     <tr><th>BATTERY</th><td>5000mA</td></tr>
     <tr><th>DIMENSION</th><td>139mm x 82mm x 25.4mm</td></tr>
