--- a/handheld/rg28xx_spec.htm
+++ b/handheld/rg28xx_spec.htm
@@ -12,7 +12,7 @@
     <tr><th>DISPLAY</th><td>2.83" 640x480</td></tr>
     <tr><th>INPUT</th><td>GamePad</td></tr>
     <tr><th>SLOT</th><td>MicroSD (x2)</td></tr>
-    <tr><th>PORT</th><td>USB C<br>Mini HDMI</td></tr>
+    <tr><th>PORT</th><td>USB-C<br>Mini HDMI</td></tr>
     <tr><th>BATTERY</th><td>3.7v 3100mA</td></tr>
     <tr><th>DIMENSION</th><td>125mm x 56.5mm x 16.5mm</td></tr>
     <tr><th>WEIGHT</th><td>125g</td></tr>
