--- a/handheld/trimui_asm_led.htm
+++ b/handheld/trimui_asm_led.htm
@@ -71,7 +71,7 @@ reset:
     .end
 </pre>
 <p>
-P.S. 紅色LED陰極連接到PE5，陽極則是連接到USB C，因此，必須插上USB C才可以測試<br><br>
+P.S. 紅色LED陰極連接到PE5，陽極則是連接到USB-C，因此，必須插上USB-C才可以測試<br><br>
 
 main.ld
 </p>
