--- a/handheld/trimui_smart_uart.htm
+++ b/handheld/trimui_smart_uart.htm
@@ -23,7 +23,7 @@
 連接UART<br>
 <img src="trimui_smart_uart/6.jpg" class="maxSize"><br><br>
 
-為了方便使用USB C連接，司徒最後改成使用PL-2303SA<br>
+為了方便使用USB-C連接，司徒最後改成使用PL-2303SA<br>
 <img src="trimui_smart_uart/10.jpg" class="maxSize"><br>
 Miyoo-Mini TXD連接到RX<br>
 Miyoo-Mini RXD連接到TX<br><br>
