--- a/handheld/trimui_spec.htm
+++ b/handheld/trimui_spec.htm
@@ -11,7 +11,7 @@
   <tr><th>DISPLAY</th><td>2.0" 320x240 (GC9308)</td></tr>
   <tr><th>SLOT</th><td>MicroSD</td></tr>
   <tr><th>INPUT</th><td>GamePad</td></tr>
-  <tr><th>PORT</th><td>USB C</td></tr>
+  <tr><th>PORT</th><td>USB-C</td></tr>
   <tr><th>BATTERY</th><td>3.7v 500mA</td></tr>
   <tr><th>DIMENSION</th><td>106mm x 56mm x 10mm</td></tr>
   <tr><th>WEIGHT</th><td>80g</td></tr>
