--- a/handheld/v10_spec.htm
+++ b/handheld/v10_spec.htm
@@ -11,7 +11,7 @@
     <tr><th>DISPLAY</th><td>3.5" 480x320</td></tr>
     <tr><th>INPUT</th><td>GamePad</tr>
     <tr><th>SLOT</th><td>MicroSD</td></tr>
-    <tr><th>PORT</th><td>USB C (x2)<br>3.5mm Jack</td></tr>
+    <tr><th>PORT</th><td>USB-C (x2)<br>3.5mm Jack</td></tr>
     <tr><th>BATTERY</th><td>3000mA</td></tr>
     <tr><th>DIMENSION</th><td>103.2mm x 94mm x 22.5mm</td></tr>
     <tr><th>WEIGHT</th><td>165g</td></tr>
