--- a/handheld/x5_spec.htm
+++ b/handheld/x5_spec.htm
@@ -11,7 +11,7 @@
     <tr><th>DISPLAY</th><td>4.0" 640x480</td></tr>
     <tr><th>INPUT</th><td>GamePad<br>JoyStick</td></tr>
     <tr><th>SLOT</th><td>MicroSD</td></tr>
-    <tr><th>PORT</th><td>USB A<br>USB C<br>USB Mini B<br>3.5mm Jack</td></tr>
+    <tr><th>PORT</th><td>USB A<br>USB-C<br>USB Mini B<br>3.5mm Jack</td></tr>
     <tr><th>BATTERY</th><td>4000mA</td></tr>
     <tr><th>DIMENSION</th><td>95mm x 135mm x 20mm</td></tr>
     <tr><th>WEIGHT</th><td>195g</td></tr>
