--- a/handheld/x6-1_spec.htm
+++ b/handheld/x6-1_spec.htm
@@ -11,7 +11,7 @@
     <tr><th>DISPLAY</th><td>3.5" 640x480</td></tr>
     <tr><th>INPUT</th><td>GamePad<br>JoyStick (x2)</td></tr>
     <tr><th>SLOT</th><td>MicroSD</td></tr>
-    <tr><th>PORT</th><td>USB C<br>USB Mini B<br>3.5mm Jack</td></tr>
+    <tr><th>PORT</th><td>USB-C<br>USB Mini B<br>3.5mm Jack</td></tr>
     <tr><th>BATTERY</th><td>3.7v 2000mA</td></tr>
     <tr><th>DIMENSION</th><td>130mm x 95mm x 20mm</td></tr>
     <tr><th>WEIGHT</th><td>161g</td></tr>
