--- a/phone.htm
+++ b/phone.htm
@@ -1544,9 +1544,9 @@ Gemini PDA 4G</h3>
 Blackberry Passport</h3>
 <hr size="1"><br><br><br><br><br>
 
-&lowast;
-<a href="phone/q30/review.htm">
-介紹</a><br>
+&dash;
+<a href="phone/q30_spec.htm">
+簡要規格</a><br>
 
 &lowast;
 <a href="phone/q30/ppsspp.htm">
