--- a/phone/astro_spec.htm
+++ b/phone/astro_spec.htm
@@ -13,7 +13,7 @@
     <tr><th>DISPLAY</th><td>6.39" 2340x1080 (Capacitive)</td></tr>
     <tr><th>SLOT</th><td>MicroSD</td></tr>
     <tr><th>INPUT</th><td>QWERTY</td></tr>
-    <tr><th>PORT</th><td>USB C</td></tr>
+    <tr><th>PORT</th><td>USB-C</td></tr>
     <tr><th>WIRELESS</th><td>Wi-Fi<br>Bluetooth v5.1</td></tr>
     <tr><th>BATTERY</th><td>4000mA</td></tr>
     <tr><th>DIMENSION</th><td>172mm x 76.5mm x 17.8mm</td></tr>
