--- a/phone/gemini_termux_uart.htm
+++ b/phone/gemini_termux_uart.htm
@@ -6,7 +6,7 @@
 <hr size="1"><br>
 <p>
 1. Gemini PDA關機<br>
-2. 接上UART線並開機，讓左邊的USB C變成UART功能<br>
+2. 接上UART線並開機，讓左邊的USB-C變成UART功能<br>
 3. 開啟Termux並執行如下命令
 </p>
 <pre>
