--- a/phone/pinephone_spec.htm
+++ b/phone/pinephone_spec.htm
@@ -15,7 +15,7 @@
     <tr><th>CAMERA</th><td>5MP</td></tr>
     <tr><th>DISPLAY</th><td>5.99" 1440×720 (Capacitive)</td></tr>
     <tr><th>SLOT</th><td>MicroSD</td></tr>
-    <tr><th>PORT</th><td>USB C<br>3.5mm Jack</td></tr>
+    <tr><th>PORT</th><td>USB-C<br>3.5mm Jack</td></tr>
     <tr><th>WIRELESS</th><td>Wi-Fi<br>Bluetooth v4.0</td></tr>
     <tr><th>BATTERY</th><td>3000mA</td></tr>
     <tr><th>DIMENSION</th><td>161mm x 77mm x 9mm</td></tr>
