--- a/phone/pro1_spec.htm
+++ b/phone/pro1_spec.htm
@@ -13,7 +13,7 @@
     <tr><th>DISPLAY</th><td>5.99" 1080x2160 (Capacitive)</td></tr>
     <tr><th>SLOT</th><td>MicroSD</td></tr>
     <tr><th>INPUT</th><td>QWERTY</td></tr>
-    <tr><th>PORT</th><td>USB C<br>3.5mm Jack</td></tr>
+    <tr><th>PORT</th><td>USB-C<br>3.5mm Jack</td></tr>
     <tr><th>WIRELESS</th><td>Wi-Fi<br>Bluetooth v5.0</td></tr>
     <tr><th>BATTERY</th><td>3200mA</td></tr>
     <tr><th>DIMENSION</th><td>154mm x 73.6mm x 13.98mm</td></tr>
