--- a/phone/pro1x_case.htm
+++ b/phone/pro1x_case.htm
@@ -56,7 +56,7 @@ https://www.printables.com/model/267403-fxtec-pro1x-case/files<br><br>
 由於是無邊框，所以按鍵都可以正常使用<br>
 <img src="pro1x_case/5.jpg" class="maxSize"><br><br>
 
-USB C沒有對齊<br>
+USB-C沒有對齊<br>
 <img src="pro1x_case/6.jpg" class="maxSize"><br><br>
 
 卡槽可以正常使用<br>
@@ -68,7 +68,7 @@ USB C沒有對齊<br>
 最大缺點是邊框容易脫落，沒有很吻合的咬住Pro1 X<br>
 <img src="pro1x_case/9.jpg" class="maxSize"><br><br>
 
-切割USB C後的保護殼，可以看出Huawei P20 Pro手機殼還是有點小<br>
+切割USB-C後的保護殼，可以看出Huawei P20 Pro手機殼還是有點小<br>
 <img src="pro1x_case/20.jpg" class="maxSize"><br><br>
 
 基於某種緣份下，手機店老闆娘推薦司徒使用iPhone的手機殼試試，這個手機殼的底面材料是硬殼，側邊則是軟殼材料，不過司徒忘記這個到底是哪款iPhone型號<br>
@@ -83,7 +83,7 @@ USB C沒有對齊<br>
 按鍵沒有對齊，不過按鍵都有被包覆著(圓弧包覆)，所以不會有誤壓問題，司徒使用美工刀切開電源鍵，這是唯一需要使用到的按鍵<br>
 <img src="pro1x_case/14.jpg" class="maxSize"><br><br>
 
-USB C沒有對齊<br>
+USB-C沒有對齊<br>
 <img src="pro1x_case/15.jpg" class="maxSize"><br><br>
 
 相機沒有對齊<br>
@@ -95,7 +95,7 @@ USB C沒有對齊<br>
 這個保護殼是目前手感最好的一個，於是，司徒再度使用美工刀裁切，裁切這邊的原因是要幫助屏幕順利推出，司徒習慣使用雙手推出螢幕<br>
 <img src="pro1x_case/36.jpg" class="maxSize"><br><br>
 
-底部裁切，這樣就可以使用USB C充電<br>
+底部裁切，這樣就可以使用USB-C充電<br>
 <img src="pro1x_case/37.jpg" class="maxSize"><br><br>
 
 裁切後的電源鍵位置<br>
