--- a/handheld/miyoo_mini_spec.htm
+++ b/handheld/miyoo_mini_spec.htm
@@ -11,7 +11,7 @@
   <tr><th>DISPLAY</th><td>2.8" 640x480<br>2.8" 752x560 (v4)</td></tr>
   <tr><th>SLOT</th><td>MicroSD</td></tr>
   <tr><th>INPUT</th><td>GamePad</td></tr>
-  <tr><th>PORT</th><td>USB C</td></tr>
+  <tr><th>PORT</th><td>USB-C</td></tr>
   <tr><th>BATTERY</th><td>3.7v 1900mA</td></tr>
   <tr><th>DIMENSION</th><td>93.5mm x 65mm x 18mm</td></tr>
   <tr><th>WEIGHT</th><td>120g</td></tr>
