--- a/handheld/trimui_smart_spec.htm
+++ b/handheld/trimui_smart_spec.htm
@@ -11,7 +11,7 @@
   <tr><th>DISPLAY</th><td>2.4" 320x240</td></tr>
   <tr><th>INPUT</th><td>GamePad</td></tr>
   <tr><th>SLOT</th><td>MicroSD</td></tr>
-  <tr><th>PORT</th><td>USB C</td></tr>
+  <tr><th>PORT</th><td>USB-C</td></tr>
   <tr><th>WIRELESS</th><td>Wi-Fi<br>Bluetooth v4.2</td></tr>
   <tr><th>BATTERY</th><td>3.7V 1200mA</td></tr>
   <tr><th>DIMENSION</th><td>110mm x 58mm x 15mm</td></tr>
