--- a/phone/cosmo_spec.htm
+++ b/phone/cosmo_spec.htm
@@ -13,7 +13,7 @@
     <tr><th>DISPLAY</th><td>5.99" 2160x1080 (Capacitive)<br>1.91" 570x240 (Capacitive)</td></tr>
     <tr><th>SLOT</th><td>MicroSD</td></tr>
     <tr><th>INPUT</th><td>QWERTY</td></tr>
-    <tr><th>PORT</th><td>USB C</td></tr>
+    <tr><th>PORT</th><td>USB-C</td></tr>
     <tr><th>WIRELESS</th><td>Wi-Fi<br>Bluetooth v5.0</td></tr>
     <tr><th>BATTERY</th><td>4220mA</td></tr>
     <tr><th>DIMENSION</th><td>171mm x 79mm x 17mm</td></tr>
