--- a/phone.htm
+++ b/phone.htm
@@ -1548,16 +1548,16 @@ Blackberry Passport</h3>
 <a href="phone/q30_spec.htm">
 簡要規格</a><br>
 
-&lowast;
-<a href="phone/q30/ppsspp.htm">
+&dash;
+<a href="phone/q30_ppsspp.htm">
 關于PPSSPP設定</a><br>
 
-&lowast;
-<a href="phone/q30/android_sdcard.htm">
-Android的SDCard資料夾位置</a><br>
+&dash;
+<a href="phone/q30_android_sdcard.htm">
+Android的SD資料夾位置</a><br>
 
-&lowast;
-<a href="phone/q30/pack_bar.htm">
+&dash;
+<a href="phone/q30_pack_bar.htm">
 如何打包成Bar檔案</a><br>
 
 &lowast;
