--- a/phone.htm
+++ b/phone.htm
@@ -1557,59 +1557,59 @@ Blackberry Passport</h3>
 Android的SD資料夾位置</a><br>
 
 &dash;
+<a href="phone/q30_sign_bar.htm">
+如何Sign Bar檔案</a><br>
+
+&dash;
 <a href="phone/q30_pack_bar.htm">
 如何打包成Bar檔案</a><br>
 
-&lowast;
-<a href="phone/q30/simulator.htm">
+&dash;
+<a href="phone/q30_simulator.htm">
 如何安裝Simulator</a><br>
 
-&lowast;
-<a href="phone/q30/debugtoken.htm">
+&dash;
+<a href="phone/q30_debugtoken.htm">
 如何安裝DebugToken</a><br>
 
-&lowast;
-<a href="phone/q30/sign_bar.htm">
-如何Sign *.Bar檔案</a><br>
-
-&lowast;
-<a href="phone/q30/support_cpp11.htm">
+&dash;
+<a href="phone/q30_support_cpp11.htm">
 如何支援-std=c++11</a><br>
 
-&lowast;
-<a href="phone/q30/ssh.htm">
+&dash;
+<a href="phone/q30_ssh.htm">
 如何透過SSH連線到手機</a><br>
 
-&lowast;
-<a href="phone/q30/core_dump.htm">
-如何取得Core dump檔案</a><br>
+&dash;
+<a href="phone/q30_core_dump.htm">
+如何取得Core Dump檔案</a><br>
 
-&lowast;
-<a href="phone/q30/retroarch_font.htm">
+&dash;
+<a href="phone/q30_retroarch_font.htm">
 如何更換RetroArch的字型</a><br>
 
-&lowast;
-<a href="phone/q30/focus.htm">
+&dash;
+<a href="phone/q30_focus.htm">
 如何禁止相機的自動對焦功能</a><br>
 
-&lowast;
-<a href="phone/q30/install_bar.htm">
+&dash;
+<a href="phone/q30_install_bar.htm">
 如何透過Chrome安裝Bar檔案</a><br>
 
-&lowast;
-<a href="phone/q30/log.htm">
+&dash;
+<a href="phone/q30_log.htm">
 如何得知目前App為何執行錯誤</a><br>
 
-&lowast;
-<a href="phone/q30/bar_simulator.htm">
+&dash;
+<a href="phone/q30_bar_simulator.htm">
 如何安裝Bar檔案到Simulator</a><br>
 
-&lowast;
-<a href="phone/q30/stop_android_app_bg.htm">
+&dash;
+<a href="phone/q30_stop_android_app_bg.htm">
 如何關閉Android App背景執行</a><br>
 
-&lowast;
-<a href="phone/q30/screenshot.htm">
+&dash;
+<a href="phone/q30_screenshot.htm">
 如何使用內建的Screenshot功能</a><br>
 
 &lowast;
