--- a/phone.htm
+++ b/phone.htm
@@ -1612,73 +1612,73 @@ Android的SD資料夾位置</a><br>
 <a href="phone/q30_screenshot.htm">
 如何使用內建的Screenshot功能</a><br>
 
-&lowast;
-<a href="phone/q30/ld_library_path.htm">
+&dash;
+<a href="phone/q30_ld_library_path.htm">
 如何設定LD_LIBRARY_PATH變數</a><br>
 
-&lowast;
-<a href="phone/q30/qcc_4.8.3.htm">
-如何設定qcc預設使用gcc 4.8.3</a><br>
+&dash;
+<a href="phone/q30_qcc_4.8.3.htm">
+如何設定QCC預設使用GCC 4.8.3</a><br>
 
-&lowast;
-<a href="phone/q30/bar_res.htm">
+&dash;
+<a href="phone/q30_bar_res.htm">
 如何讓App取得Bar檔案裡面的資源</a><br>
 
-&lowast;
-<a href="phone/q30/google.htm">
+&dash;
+<a href="phone/q30_google.htm">
 如何安裝Google Play Service</a><br>
 
-&lowast;
-<a href="phone/q30/gdb.htm">
+&dash;
+<a href="phone/q30_gdb.htm">
 如何透過GDB Debug Native App</a><br>
 
-&lowast;
-<a href="phone/q30/apk_dpi.htm">
+&dash;
+<a href="phone/q30_apk_dpi.htm">
 如何修改Android應用程式的顯示字型大小</a><br>
 
-&lowast;
-<a href="phone/q30/music.htm">
+&dash;
+<a href="phone/q30_music.htm">
 解決Music會無故停止播放的問題</a><br>
 
-&lowast;
-<a href="phone/q30/fix_retroarch.htm">
+&dash;
+<a href="phone/q30_fix_retroarch.htm">
 解決安裝RetroArch卻沒有Core可以使用的問題</a><br>
 
-&lowast;
-<a href="phone/q30/earphone.htm">
+&dash;
+<a href="phone/q30_earphone.htm">
 解決使用耳機聽音樂又剛好有人打電話進來的問題</a><br>
 
-&lowast;
-<a href="phone/q30/fix_rdynamic.htm">
-解決"ntoarmv7-gcc: error: unrecognized option '-rdynamic'"的問題</a><br>
+&dash;
+<a href="phone/q30_fix_rdynamic.htm">
+解決ntoarmv7-gcc: error: unrecognized option -rdynamic的問題</a><br>
 
-&lowast;
-<a href="phone/q30/fix_libstdc++.htm">
-解決"terminated SIGSEGV code=1...(/proc/boot/libcpp.so.4...)"的問題</a><br>
+&dash;
+<a href="phone/q30_fix_libstdc++.htm">
+解決Terminated SIGSEGV code=1...(/proc/boot/libcpp.so.4...)的問題</a><br>
 
 &oplus;
 <b>Cascades (C/C++)</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/q30/cascades/cpp_setup.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/q30_cascades_cpp_setup.htm">
     開發環境</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/q30/cascades/cpp_hello.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/q30_cascades_cpp_hello.htm">
     Hello, world!</a><br>
 
 &oplus;
 <b>Core Native (C/C++)</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/q30/cascades/cpp_setup.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/q30/cascades_cpp_setup.htm">
     開發環境</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&oplus;
-    SDL 1.2<br>
+    <b>SDL v1.2</b><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/q30/ndk/sdl-1.2/hello.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="phone/q30_ndk_sdl_hello.htm">
         Hello, world!</a><br>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
@@ -1724,13 +1724,6 @@ Android的SD資料夾位置</a><br>
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="phone/q30/ndk/sdl-1.2/timing.htm">
         Timing</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&oplus;
-    Screen Graphics Subsystem<br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/q30/ndk/screen/ch1.htm">
-        Application Development</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="phone/q30/ndk/build_term48.htm">
