--- a/phone.htm
+++ b/phone.htm
@@ -1681,88 +1681,80 @@ Android的SD資料夾位置</a><br>
         <a href="phone/q30_ndk_sdl_hello.htm">
         Hello, world!</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/q30/ndk/sdl-1.2/surface.htm">
-        Surface</a><br>
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="phone/q30_ndk_sdl_image.htm">
+        Load Image</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/q30/ndk/sdl-1.2/image.htm">
-        Image</a><br>
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="phone/q30_ndk_sdl_clip.htm">
+        Clip Image</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/q30/ndk/sdl-1.2/event.htm">
-        Event</a><br>
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="phone/q30_ndk_sdl_surface.htm">
+        Blit Surface</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/q30/ndk/sdl-1.2/color.htm">
-        Color</a><br>
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="phone/q30_ndk_sdl_color.htm">
+        Color Key</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/q30/ndk/sdl-1.2/clip.htm">
-        Clip</a><br>
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="phone/q30_ndk_sdl_font.htm">
+        Open Font</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/q30/ndk/sdl-1.2/font.htm">
-        Fonts</a><br>
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="phone/q30_ndk_sdl_key.htm">
+        Keyboard Event</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/q30/ndk/sdl-1.2/key.htm">
-        Keyboard</a><br>
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="phone/q30_ndk_sdl_mouse.htm">
+        Mouse Event</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/q30/ndk/sdl-1.2/mouse.htm">
-        Mouse</a><br>
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="phone/q30_ndk_sdl_music.htm">
+        Load Music</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/q30/ndk/sdl-1.2/state.htm">
-        KeyStates</a><br>
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="phone/q30_ndk_sdl_tick.htm">
+        Get Ticks</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/q30/ndk/sdl-1.2/sound.htm">
-        Sounds</a><br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/q30/ndk/sdl-1.2/timing.htm">
-        Timing</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/q30/ndk/build_term48.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/q30_ndk_build_term48.htm">
     Build Term48</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/q30/ndk/build_sdl-1.2.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/q30_ndk_build_sdl-1.2.htm">
     Build SDL 1.2</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/q30/ndk/build_sdl_ttf-2.0.11.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/q30_ndk_build_sdl_ttf-2.0.11.htm">
     Build SDL_ttf 2.0.11</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/q30/ndk/build_sdl_image-1.2.12.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/q30_ndk_build_sdl_image-1.2.12.htm">
     Build SDL_image 1.2.12</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/q30/ndk/build_sdl_mixer-1.2.12.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/q30_ndk_build_sdl_mixer-1.2.12.htm">
     Build SDL_mixer 1.2.12</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/q30/ndk/build_ppsspp-0.9.9.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/q30_ndk_build_ppsspp-0.9.9.htm">
     Build PPSSPP 0.9.9</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/q30/ndk/build_libwebp-0.6.1.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/q30_ndk_build_libwebp-0.6.1.htm">
     Build libwebp-0.6.1</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/q30/ndk/build_freetype-2.4.0.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/q30_ndk_build_freetype-2.4.0.htm">
     Build freetype 2.4.0</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/q30/ndk/build_libmikmod-3.3.11.1.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/q30_ndk_build_libmikmod-3.3.11.1.htm">
     Build libmikmod 3.3.11.1</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/q30/ndk/port_nx.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/q30_ndk_port_nx.htm">
     移植NXEngine(Cave Story)</a><br>
 <br><br><br><br>
 
