--- a/phone/q30_ndk_port_nx.htm
+++ b/phone/q30_ndk_port_nx.htm
@@ -1,54 +1,11 @@
-﻿<!--
- ____________________________________________________________
-|                                                            |
-|    DESIGN + Pat Heard { http://fullahead.org }             |
-|      DATE + 2006.09.12                                     |
-| COPYRIGHT + Free use if this notice is kept in place.      |
-|____________________________________________________________|
-
--->
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-  <title>司徒的教學網站</title>
-  <meta http-lowast="content-type" content="application/xhtml+xml; charset=UTF-8" />
-  <meta name="author" content="fullahead.org" />
-  <meta name="keywords" content="XHTML, CSS, template, FullAhead" />
-  <meta name="description" content="A valid, XHTML 1.0 template" />
-  <meta name="robots" content="index, follow, noarchive" />
-  <meta name="googlebot" content="noarchive" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.1, maximum-scale=100.0"/>
+<head><script type="text/javascript" src="../page_head.js"></script>
 
-  <link rel="shortcut icon" href="../../../website.ico">
-  <link rel="stylesheet" type="text/css" href="../../../styles/shCore.css" />
-  <link rel="stylesheet" type="text/css" href="../../../styles/shThemeDefault.css" />
-  <link rel="stylesheet" type="text/css" href="../../../css/html.css" media="screen, projection, tv " />
-  <link rel="stylesheet" type="text/css" href="../../../css/layout.css" media="screen, projection, tv" />
-  <link rel="stylesheet" type="text/css" href="../../../css/print.css" media="print" />
-  
-  <script type="text/javascript" src="../../../scripts/shCore.js"></script>
-  <script type="text/javascript" src="../../../scripts/shBrushCpp.js"></script>
-
-  <!-- Conditional comment to apply opacity fix for IE #content background.
-       Invalid CSS, but can be removed without harming design -->
-  <!--[if gt IE 5]>
-  <link rel="stylesheet" type="text/css" href="css/ie.css" media="screen, projection, tv " />
-  <![endif]-->
-</head>
-
-<body>
-<script type="text/javascript">SyntaxHighlighter.all();</script>
-<div id="wrapper">
-<div id="content">
-<script type="text/javascript" src="../../../header.js"></script>
-<div id="page">
-<h3>Blackberry Passport &gt;&gt; Core Native (C/C++)</h3>
-<p><b>移植NXEngine(Cave Story)</b></p>
-<hr size="1">
+<h3><a href="../phone.htm">手機</a> - Blackberry Passport - Core Native (C/C++) - <b>移植NXEngine(Cave Story)</b></h3>
+<hr size="1"><br>
 <p>
-編譯：
+步驟如下：
 </p>
 <pre>
 $ source ~/bbndk/bbndk-env_10_3_1_995.sh
@@ -60,9 +17,9 @@ $ make
 </pre><br>
 
 <p>
-程式：
+diff
 </p>
-<pre class="brush:cpp">
+<pre>
 diff -Nr old_nx/ai/ai.cpp new_nx/ai/ai.cpp
 41c41
 &lt; 	FILE *fp = fileopen("data/npc.tbl", "rb");
@@ -498,15 +455,7 @@ diff -Nr old_nx/sound/sound.cpp new_nx/sound/sound.cpp
 
 <p>
 完成<br>
-<img src="port_nx/1.jpg" class="maxSize">
+<img src="q30_ndk_port_nx/1.jpg" class="maxSize">
 </p>
 
-<p>
-<br><a href="../../../phone.htm">返回上一頁</a>
-</p>
-
-</div>
-</div>
-</div>
-</body>
-</html>
+<br><script type="text/javascript" src="../tail.js"></script>
