--- a/phone.htm
+++ b/phone.htm
@@ -1814,85 +1814,71 @@ Mugen Power 3.7V 3200mA電池</a><br>
 &oplus;
 <b>x86</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/f07c/x86/install_win7.htm">
-    安裝Win7</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/f07c_x86_win7_setup.htm">
+    安裝Windows 7</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/f07c/x86/install_win8.htm">
-    安裝Win8</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/f07c/x86/overclock.htm">
-    超頻(CPU 1.2GHz)</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/f07c/x86/jp2en.htm">
-    (原廠系統)英文語系</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/f07c/x86/add_rdp.htm">
-    (原廠系統)開啟遠端桌面連線</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/f07c/x86/install_lubuntu.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/f07c_x86_lubuntu_setup.htm">
     安裝Lubuntu</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/f07c/x86/install_xubuntu.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/f07c_x86_xubuntu_setup.htm">
     安裝Xubuntu</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/f07c/x86/xubuntu_xmodmap.htm">
-    定義鍵盤符號(Xubuntu)</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/f07c/x86/install_archlinux_lxde.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/f07c_x86_archlinux_lxde_setup.htm">
     安裝Arch Linux(LXDE)</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/f07c/x86/install_archlinux_xfce4.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/f07c_x86_archlinux_xfce4_setup.htm">
     安裝Arch Linux(XFCE4)</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/f07c/x86/install_debian7_lxde.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/f07c_x86_debian7_lxde_setup.htm">
     安裝Debian 7.0(LXDE)</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&oplus;
-    Debian 8.0<br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/f07c_x86_debian8_lxde_setup.htm">
+    安裝Debian 8.0(LXDE)</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/f07c/x86/debian8/install_lxde.htm">
-        安裝LXDE介面</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/f07c_x86_debian9_lxde_setup.htm">
+    安裝Debian 9.0(LXDE)</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/f07c/x86/debian8/build_kernel.htm">
-        Build Kernel 3.16</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/f07c_x86_disable_touch.htm">
+    如何關閉Touchscreen</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&oplus;
-    Debian 9.0<br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/f07c_x86_overclock.htm">
+    超頻(CPU 1.2GHz)</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/f07c/x86/debian9/install_lxde.htm">
-        安裝LXDE介面</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/f07c_x86_jp2en.htm">
+    (原廠系統)英文語系</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/f07c/x86/debian9/disable_touch.htm">
-        如何關閉Touchscreen</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/f07c_x86_add_rdp.htm">
+    (原廠系統)開啟遠端桌面連線</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/f07c_x86_xubuntu_xmodmap.htm">
+    定義鍵盤符號(Xubuntu)</a><br>
 
 &oplus;
 <b>Symbian</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/f07c/symbian/pdf.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/f07c_symbian_pdf.htm">
     如何傳送PDF檔案到手機</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/f07c/symbian/mp3.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/f07c_symbian_mp3.htm">
     如何傳送MP3檔案到手機</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/f07c/symbian/call.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/f07c_symbian_call.htm">
     如何在台灣使用已解鎖的F-07手機</a>
 <br><br><br><br>
 
